--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=professor-allocation
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_allocation_fafire2025?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
